Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...8d4d158](https://github.com/cri-o/cri-o/compare/v1.21.0...8d4d158935929800c4300b82eb4b5a83ded400f4) on Mon, 13 Sep 2021 19:42:57 UTC.
+[v1.21.0...35d1be8](https://github.com/cri-o/cri-o/compare/v1.21.0...35d1be86dcd5bab3f772c3c6b1ec85f34477a76a) on Fri, 08 Oct 2021 13:47:56 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz)
-- [cri-o.arm64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8d4d158935929800c4300b82eb4b5a83ded400f4.tar.gz)
+- [cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
+- [cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -46,6 +46,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Feature
  - Added `--metrics-collectors`/`metrics_collectors` configuration to enable or disable certain metrics.
   All metrics collectors are enabled per default. ([#5061](https://github.com/cri-o/cri-o/pull/5061), [@saschagrunert](https://github.com/saschagrunert))
+ - Added `--profile-cpu` and `--profile-mem` CLI flags to write pprof profiles to a file when CRI-O exists. ([#5268](https://github.com/cri-o/cri-o/pull/5268), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio_image_pulls_layer_size` histogram metric to get insights about all pulled layer sizes. ([#5059](https://github.com/cri-o/cri-o/pull/5059), [@saschagrunert](https://github.com/saschagrunert))
  - Added build tags as well as AppArmor and seccomp status to `crio version` output. ([#5135](https://github.com/cri-o/cri-o/pull/5135), [@saschagrunert](https://github.com/saschagrunert))
  - Added generation of self-signed certificates for the secure metrics endpoint
@@ -81,7 +82,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add the config field `internal_wipe` which moves the responsibility of wiping containers after a reboot and images after an upgrade from the external binary `crio wipe` to the main crio server. This has a handful of advantages, the main one being crio is now better able to cleanup CNI resources after a reboot. ([#4767](https://github.com/cri-o/cri-o/pull/4767), [@haircommander](https://github.com/haircommander))
  - Allow users to customize conmon's resources if a pod is in a workload. ([#4907](https://github.com/cri-o/cri-o/pull/4907), [@haircommander](https://github.com/haircommander))
  - CRI-O now logs when it is using cgroupv2 ([#5183](https://github.com/cri-o/cri-o/pull/5183), [@haircommander](https://github.com/haircommander))
- - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug in `internal_wipe` that would mean CNI resources would be leaked across reboots. ([#4900](https://github.com/cri-o/cri-o/pull/4900), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O can't work with runc 1.0.0-rc93 because of an incorrectly specified list of capabilities ([#4828](https://github.com/cri-o/cri-o/pull/4828), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak opened files for namespaces on a server restore ([#4758](https://github.com/cri-o/cri-o/pull/4758), [@haircommander](https://github.com/haircommander))
@@ -97,7 +97,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5107](https://github.com/cri-o/cri-o/pull/5107), [@haircommander](https://github.com/haircommander))
  - Fix drop ALL and add back few caps behavior to not include the default configured capabilities ([#4923](https://github.com/cri-o/cri-o/pull/4923), [@mrunalp](https://github.com/mrunalp))
  - Fix potential panic when reopening a container's log ([#5212](https://github.com/cri-o/cri-o/pull/5212), [@haircommander](https://github.com/haircommander))
- - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where it was not possible to run containers using the default or no seccomp profile on 
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
@@ -113,7 +112,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Other (Cleanup or Flake)
  - Add systemd After=crio.service to containers and conmon ([#4766](https://github.com/cri-o/cri-o/pull/4766), [@mrunalp](https://github.com/mrunalp))
- - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
  - Switched build artifacts to be published via the [cri-o](https://console.cloud.google.com/storage/browser/cri-o) bucket. ([#4761](https://github.com/cri-o/cri-o/pull/4761), [@saschagrunert](https://github.com/saschagrunert))
  - Use build tag for `linkmode` detection on `crio version`. ([#5239](https://github.com/cri-o/cri-o/pull/5239), [@saschagrunert](https://github.com/saschagrunert))
 
@@ -253,7 +251,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/jsonreference: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonreference/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/swag: [v0.19.5 → v0.19.14](https://github.com/go-openapi/swag/compare/v0.19.5...v0.19.14)
-- github.com/godbus/dbus/v5: [v5.0.4 → v5.0.5](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.5)
 - github.com/gofrs/flock: [v0.8.0 → v0.8.1](https://github.com/gofrs/flock/compare/v0.8.0...v0.8.1)
 - github.com/golang/groupcache: [8c9f03a → 41bb18b](https://github.com/golang/groupcache/compare/8c9f03a...41bb18b)
 - github.com/golang/mock: [v1.5.0 → v1.6.0](https://github.com/golang/mock/compare/v1.5.0...v1.6.0)
