Update release notes

--- a/v1.22.0.md
+++ b/v1.22.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.22.0
 
 The release notes have been generated for the commit range
-[v1.21.0...35d1be8](https://github.com/cri-o/cri-o/compare/v1.21.0...35d1be86dcd5bab3f772c3c6b1ec85f34477a76a) on Fri, 08 Oct 2021 13:47:56 UTC.
+[v1.21.0...d745cab](https://github.com/cri-o/cri-o/compare/v1.21.0...d745cab2187b547545f7bc79f65d587a9747e960) on Thu, 14 Oct 2021 07:37:09 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
-- [cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.35d1be86dcd5bab3f772c3c6b1ec85f34477a76a.tar.gz)
+- [cri-o.amd64.d745cab2187b547545f7bc79f65d587a9747e960.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d745cab2187b547545f7bc79f65d587a9747e960.tar.gz)
+- [cri-o.arm64.d745cab2187b547545f7bc79f65d587a9747e960.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d745cab2187b547545f7bc79f65d587a9747e960.tar.gz)
 
 ## Changelog since v1.21.0
 
@@ -44,9 +44,10 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Update how the resources for a workload is specified. Now, to override a workload, the pod must have the annotation `$prefix/$ctr_name = {"$resource_type": "$resource_value"}`. The workloads feature has also been marked as experimental, which should have happened from the beginning. ([#4787](https://github.com/cri-o/cri-o/pull/4787), [@haircommander](https://github.com/haircommander))
 
 #### Feature
+ - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled
+  Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5403](https://github.com/cri-o/cri-o/pull/5403), [@haircommander](https://github.com/haircommander))
  - Added `--metrics-collectors`/`metrics_collectors` configuration to enable or disable certain metrics.
   All metrics collectors are enabled per default. ([#5061](https://github.com/cri-o/cri-o/pull/5061), [@saschagrunert](https://github.com/saschagrunert))
- - Added `--profile-cpu` and `--profile-mem` CLI flags to write pprof profiles to a file when CRI-O exists. ([#5268](https://github.com/cri-o/cri-o/pull/5268), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio_image_pulls_layer_size` histogram metric to get insights about all pulled layer sizes. ([#5059](https://github.com/cri-o/cri-o/pull/5059), [@saschagrunert](https://github.com/saschagrunert))
  - Added build tags as well as AppArmor and seccomp status to `crio version` output. ([#5135](https://github.com/cri-o/cri-o/pull/5135), [@saschagrunert](https://github.com/saschagrunert))
  - Added generation of self-signed certificates for the secure metrics endpoint
@@ -101,7 +102,6 @@ Download one of our static release bundles via our Google Cloud Bucket:
   seccomp disabled builds/machines ([#4789](https://github.com/cri-o/cri-o/pull/4789), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed bug where runtime VM created containers never reach their `completed` state. ([#4803](https://github.com/cri-o/cri-o/pull/4803), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed linkmode detection for on `en_US` systems `crio version` ([#5168](https://github.com/cri-o/cri-o/pull/5168), [@saschagrunert](https://github.com/saschagrunert))
- - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed runtime panic for layers lockfile if its parent directory does not exist.
   Added support for repositories in auth.json ([#5076](https://github.com/cri-o/cri-o/pull/5076), [@saschagrunert](https://github.com/saschagrunert))
  - Re-attempt setting up conmon's cgroup if it fails on EAGAIN from dbus ([#4921](https://github.com/cri-o/cri-o/pull/4921), [@haircommander](https://github.com/haircommander))
@@ -119,6 +119,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add Particule as adopters ([#4994](https://github.com/cri-o/cri-o/pull/4994), [@ArchiFleKs](https://github.com/ArchiFleKs))
  - Add `--device-ownership-from-security-context` which allows an admin to specify devices be configured to be owned by the container user and group, rather than unconditionally being root. ([#4620](https://github.com/cri-o/cri-o/pull/4620), [@mythi](https://github.com/mythi))
  - Added `internal/process/defunct_processes.go` and `crio_processes_defunct` metric to collect the total number of defunct/zombie processes in a node. ([#5082](https://github.com/cri-o/cri-o/pull/5082), [@raisaat](https://github.com/raisaat))
+ - Do not log on startup if Intel RDT is not supported. ([#5298](https://github.com/cri-o/cri-o/pull/5298), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5295](https://github.com/cri-o/cri-o/pull/5295), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5309](https://github.com/cri-o/cri-o/pull/5309), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5315](https://github.com/cri-o/cri-o/pull/5315), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5259](https://github.com/cri-o/cri-o/pull/5259), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Raise a warning when creating a bind mount on the container root ([#4853](https://github.com/cri-o/cri-o/pull/4853), [@giuseppe](https://github.com/giuseppe))
 
 ## Dependencies
@@ -232,7 +238,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/common: [v0.35.4 → v0.43.2](https://github.com/containers/common/compare/v0.35.4...v0.43.2)
 - github.com/containers/image/v5: [v5.11.0 → v5.15.2](https://github.com/containers/image/v5/compare/v5.11.0...v5.15.2)
 - github.com/containers/ocicrypt: [v1.1.0 → v1.1.2](https://github.com/containers/ocicrypt/compare/v1.1.0...v1.1.2)
-- github.com/containers/podman/v3: [v3.1.0 → v3.3.1](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.1)
+- github.com/containers/podman/v3: [v3.1.0 → v3.3.0](https://github.com/containers/podman/v3/compare/v3.1.0...v3.3.0)
 - github.com/containers/storage: [v1.28.1 → v1.34.1](https://github.com/containers/storage/compare/v1.28.1...v1.34.1)
 - github.com/coredns/corefile-migration: [v1.0.11 → v1.0.12](https://github.com/coredns/corefile-migration/compare/v1.0.11...v1.0.12)
 - github.com/coreos/go-systemd/v22: [v22.3.1 → v22.3.2](https://github.com/coreos/go-systemd/v22/compare/v22.3.1...v22.3.2)
@@ -244,10 +250,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/envoyproxy/go-control-plane: [5f8ba28 → 63b5d3c](https://github.com/envoyproxy/go-control-plane/compare/5f8ba28...63b5d3c)
 - github.com/evanphx/json-patch: [v4.9.0+incompatible → v4.11.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.9.0...v4.11.0)
 - github.com/form3tech-oss/jwt-go: [v3.2.2+incompatible → v3.2.3+incompatible](https://github.com/form3tech-oss/jwt-go/compare/v3.2.2...v3.2.3)
-- github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.2 → v1.7.3](https://github.com/fsouza/go-dockerclient/compare/v1.7.2...v1.7.3)
 - github.com/go-kit/kit: [v0.10.0 → v0.9.0](https://github.com/go-kit/kit/compare/v0.10.0...v0.9.0)
-- github.com/go-logr/logr: [v0.4.0 → v1.1.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.1.0)
 - github.com/go-openapi/jsonpointer: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonpointer/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/jsonreference: [v0.19.3 → v0.19.5](https://github.com/go-openapi/jsonreference/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/swag: [v0.19.5 → v0.19.14](https://github.com/go-openapi/swag/compare/v0.19.5...v0.19.14)
@@ -291,7 +295,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/opencontainers/runc: [v1.0.0-rc93 → v1.0.2](https://github.com/opencontainers/runc/compare/v1.0.0-rc93...v1.0.2)
 - github.com/opencontainers/runtime-spec: [7413a7f → 8961758](https://github.com/opencontainers/runtime-spec/compare/7413a7f...8961758)
 - github.com/opencontainers/runtime-tools: [d1bf3e6 → 59cdde0](https://github.com/opencontainers/runtime-tools/compare/d1bf3e6...59cdde0)
-- github.com/opencontainers/selinux: [v1.8.0 → v1.8.4](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.8.4)
+- github.com/opencontainers/selinux: [v1.8.0 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.0...v1.9.1)
 - github.com/openshift/imagebuilder: [v1.2.0 → 87f3e48](https://github.com/openshift/imagebuilder/compare/v1.2.0...87f3e48)
 - github.com/pelletier/go-toml: [v1.2.0 → v1.9.3](https://github.com/pelletier/go-toml/compare/v1.2.0...v1.9.3)
 - github.com/pkg/diff: [5b29258 → 20ebb0f](https://github.com/pkg/diff/compare/5b29258...20ebb0f)
@@ -332,7 +336,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - gopkg.in/gcfg.v1: v1.2.3 → v1.2.0
 - gopkg.in/ini.v1: v1.51.0 → v1.62.0
 - gopkg.in/yaml.v3: eeeca48 → 496545a
-- k8s.io/klog/v2: v2.8.0 → v2.20.0
+- k8s.io/klog/v2: v2.8.0 → v2.10.0
 - k8s.io/kube-openapi: 591a79e → 9528897
 - k8s.io/kubernetes/staging/src/k8s.io/api: cb303e6 → c2b5237
 - k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: cb303e6 → c2b5237
