--- a/v1.20.5.md
+++ b/v1.20.5.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.5
 
 The release notes have been generated for the commit range
-[v1.20.4...5fcc3f9](https://github.com/cri-o/cri-o/compare/v1.20.4...5fcc3f95e3dac505123b3401fe15aaf7ef8e8510) on Wed, 06 Oct 2021 19:47:01 UTC.
+[v1.20.4...14a27db](https://github.com/cri-o/cri-o/compare/v1.20.4...14a27db564b08c4386f681c618b4a5bbfb6dc90f) on Thu, 14 Oct 2021 09:41:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz)
-- [cri-o.arm64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.5fcc3f95e3dac505123b3401fe15aaf7ef8e8510.tar.gz)
+- [cri-o.amd64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz)
+- [cri-o.arm64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz)
 
 ## Changelog since v1.20.4
 
@@ -37,6 +37,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Improve memory usage during container image layer extraction. ([#5201](https://github.com/cri-o/cri-o/pull/5201), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
+ - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5370](https://github.com/cri-o/cri-o/pull/5370), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an RSS regression with exec sync requests ([#5270](https://github.com/cri-o/cri-o/pull/5270), [@mrunalp](https://github.com/mrunalp))
  - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5122](https://github.com/cri-o/cri-o/pull/5122), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
