Update release notes

--- a/v1.21.3.md
+++ b/v1.21.3.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.3
 
 The release notes have been generated for the commit range
-[v1.21.2...e34bf50](https://github.com/cri-o/cri-o/compare/v1.21.2...e34bf502a3d7227e01780521a43b1be98eac0b52) on Mon, 11 Oct 2021 23:02:21 UTC.
+[v1.21.2...e87e050](https://github.com/cri-o/cri-o/compare/v1.21.2...e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5) on Thu, 14 Oct 2021 21:34:02 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e34bf502a3d7227e01780521a43b1be98eac0b52.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e34bf502a3d7227e01780521a43b1be98eac0b52.tar.gz)
-- [cri-o.arm64.e34bf502a3d7227e01780521a43b1be98eac0b52.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e34bf502a3d7227e01780521a43b1be98eac0b52.tar.gz)
+- [cri-o.amd64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz)
+- [cri-o.arm64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz)
 
 ## Changelog since v1.21.2
 
@@ -32,6 +32,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5297](https://github.com/cri-o/cri-o/pull/5297), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5407](https://github.com/cri-o/cri-o/pull/5407), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5389](https://github.com/cri-o/cri-o/pull/5389), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an RSS regression with exec sync requests ([#5262](https://github.com/cri-o/cri-o/pull/5262), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5121](https://github.com/cri-o/cri-o/pull/5121), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
