--- a/v1.20.5.md
+++ b/v1.20.5.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.5
 
 The release notes have been generated for the commit range
-[v1.20.4...14a27db](https://github.com/cri-o/cri-o/compare/v1.20.4...14a27db564b08c4386f681c618b4a5bbfb6dc90f) on Thu, 14 Oct 2021 09:41:52 UTC.
+[v1.20.4...037c669](https://github.com/cri-o/cri-o/compare/v1.20.4...037c669cfb5ffc9ba8735e066cb0d5fab74e4916) on Thu, 14 Oct 2021 21:37:02 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz)
-- [cri-o.arm64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.14a27db564b08c4386f681c618b4a5bbfb6dc90f.tar.gz)
+- [cri-o.amd64.037c669cfb5ffc9ba8735e066cb0d5fab74e4916.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.037c669cfb5ffc9ba8735e066cb0d5fab74e4916.tar.gz)
+- [cri-o.arm64.037c669cfb5ffc9ba8735e066cb0d5fab74e4916.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.037c669cfb5ffc9ba8735e066cb0d5fab74e4916.tar.gz)
 
 ## Changelog since v1.20.4
 
@@ -38,6 +38,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5370](https://github.com/cri-o/cri-o/pull/5370), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5408](https://github.com/cri-o/cri-o/pull/5408), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an RSS regression with exec sync requests ([#5270](https://github.com/cri-o/cri-o/pull/5270), [@mrunalp](https://github.com/mrunalp))
  - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
  - Fix an issue where a container started with a terminal fails on exec sync calls ([#5122](https://github.com/cri-o/cri-o/pull/5122), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
