Update release notes

--- a/v1.21.3.md
+++ b/v1.21.3.md
@@ -2,6 +2,7 @@
   - [Downloads](#downloads)
   - [Changelog since v1.21.2](#changelog-since-v1212)
     - [Changes by Kind](#changes-by-kind)
+      - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
@@ -12,18 +13,22 @@
 # CRI-O v1.21.3
 
 The release notes have been generated for the commit range
-[v1.21.2...e87e050](https://github.com/cri-o/cri-o/compare/v1.21.2...e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5) on Thu, 14 Oct 2021 21:34:02 UTC.
+[v1.21.2...7415a53](https://github.com/cri-o/cri-o/compare/v1.21.2...7415a53ec35d075a14e434378dd98e5ae159fa36) on Fri, 15 Oct 2021 10:21:45 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz)
-- [cri-o.arm64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e87e050d3b2bf6c2c0d901b1fc6e21db26b9b6a5.tar.gz)
+- [cri-o.amd64.7415a53ec35d075a14e434378dd98e5ae159fa36.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.7415a53ec35d075a14e434378dd98e5ae159fa36.tar.gz)
+- [cri-o.arm64.7415a53ec35d075a14e434378dd98e5ae159fa36.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.7415a53ec35d075a14e434378dd98e5ae159fa36.tar.gz)
 
 ## Changelog since v1.21.2
 
 ### Changes by Kind
+
+#### Feature
+ - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled
+  Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5406](https://github.com/cri-o/cri-o/pull/5406), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5093](https://github.com/cri-o/cri-o/pull/5093), [@haircommander](https://github.com/haircommander))
@@ -44,7 +49,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
-- github.com/opencontainers/selinux: [v1.8.2 → v1.8.5](https://github.com/opencontainers/selinux/compare/v1.8.2...v1.8.5)
+- github.com/opencontainers/selinux: [v1.8.2 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.2...v1.9.1)
 
 ### Removed
 - github.com/rjeczalik/notify: [v0.9.2](https://github.com/rjeczalik/notify/tree/v0.9.2)
