Update release notes

--- a/v1.20.5.md
+++ b/v1.20.5.md
@@ -13,14 +13,14 @@
 # CRI-O v1.20.5
 
 The release notes have been generated for the commit range
-[v1.20.4...ec973a2](https://github.com/cri-o/cri-o/compare/v1.20.4...ec973a297fbfb01708b83c6bcd1bdf67847efea3) on Fri, 15 Oct 2021 01:49:54 UTC.
+[v1.20.4...e80c8db](https://github.com/cri-o/cri-o/compare/v1.20.4...e80c8db4581013ad44c9202b3cf8356987264f34) on Thu, 21 Oct 2021 05:57:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ec973a297fbfb01708b83c6bcd1bdf67847efea3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ec973a297fbfb01708b83c6bcd1bdf67847efea3.tar.gz)
-- [cri-o.arm64.ec973a297fbfb01708b83c6bcd1bdf67847efea3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ec973a297fbfb01708b83c6bcd1bdf67847efea3.tar.gz)
+- [cri-o.amd64.e80c8db4581013ad44c9202b3cf8356987264f34.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e80c8db4581013ad44c9202b3cf8356987264f34.tar.gz)
+- [cri-o.arm64.e80c8db4581013ad44c9202b3cf8356987264f34.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e80c8db4581013ad44c9202b3cf8356987264f34.tar.gz)
 
 ## Changelog since v1.20.4
 
@@ -28,6 +28,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Feature
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#5229](https://github.com/cri-o/cri-o/pull/5229), [@haircommander](https://github.com/haircommander))
+ - Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5413](https://github.com/cri-o/cri-o/pull/5413), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
  - Fix a bug where a container exec process received a little less time than the timeout provided ([#5094](https://github.com/cri-o/cri-o/pull/5094), [@haircommander](https://github.com/haircommander))
