Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -16,14 +16,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...e90307f](https://github.com/cri-o/cri-o/compare/v1.22.0...e90307f37acf1acaf6e3d450e1eb1d2351de313b) on Mon, 25 Oct 2021 09:55:09 UTC.
+[v1.22.0...bf8bc04](https://github.com/cri-o/cri-o/compare/v1.22.0...bf8bc04f08417b38043979620b100838d46e4f00) on Mon, 25 Oct 2021 16:29:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e90307f37acf1acaf6e3d450e1eb1d2351de313b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e90307f37acf1acaf6e3d450e1eb1d2351de313b.tar.gz)
-- [cri-o.arm64.e90307f37acf1acaf6e3d450e1eb1d2351de313b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e90307f37acf1acaf6e3d450e1eb1d2351de313b.tar.gz)
+- [cri-o.amd64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz)
+- [cri-o.arm64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -38,6 +38,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Adds support for `allowed_annotations` for workloads. The field functions the same as `allowed_annotations` in runtime handlers, and is meant to replace the runtime handler variant.
   Deprecate `allowed_annotations` in runtime handlers. ([#5358](https://github.com/cri-o/cri-o/pull/5358), [@haircommander](https://github.com/haircommander))
  - Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5386](https://github.com/cri-o/cri-o/pull/5386), [@saschagrunert](https://github.com/saschagrunert))
+ - The option to export OpenTelemetry trace data has been added. This is experimental and not enabled by default. To enable tracing, configure the tracing section of the crio configuration file. ([#4883](https://github.com/cri-o/cri-o/pull/4883), [@sallyom](https://github.com/sallyom))
 
 #### Documentation
  - Improve runtime handler documentation to mention "runtime handler" in favor of the internal "runtime_handler" variable. ([#5395](https://github.com/cri-o/cri-o/pull/5395), [@saschagrunert](https://github.com/saschagrunert))
@@ -62,10 +63,13 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Added
 - github.com/dtylman/scp: [f3000a3](https://github.com/dtylman/scp/tree/f3000a3)
+- go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc: v1.0.1
+- go.opentelemetry.io/otel/exporters/otlp/otlptrace: v1.0.1
 
 ### Changed
 - github.com/Microsoft/go-winio: [v0.5.0 → v0.5.1](https://github.com/Microsoft/go-winio/compare/v0.5.0...v0.5.1)
 - github.com/Microsoft/hcsshim: [v0.8.20 → v0.8.22](https://github.com/Microsoft/hcsshim/compare/v0.8.20...v0.8.22)
+- github.com/cenkalti/backoff/v4: [v4.1.0 → v4.1.1](https://github.com/cenkalti/backoff/v4/compare/v4.1.0...v4.1.1)
 - github.com/cespare/xxhash/v2: [v2.1.1 → v2.1.2](https://github.com/cespare/xxhash/v2/compare/v2.1.1...v2.1.2)
 - github.com/cncf/xds/go: [fbca930 → aa0b789](https://github.com/cncf/xds/go/compare/fbca930...aa0b789)
 - github.com/containerd/cgroups: [v1.0.1 → v1.0.2](https://github.com/containerd/cgroups/compare/v1.0.1...v1.0.2)
@@ -98,6 +102,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/urfave/cli: [v1.22.2 → v1.22.4](https://github.com/urfave/cli/compare/v1.22.2...v1.22.4)
 - github.com/vbatts/tar-split: [v0.11.1 → v0.11.2](https://github.com/vbatts/tar-split/compare/v0.11.1...v0.11.2)
 - github.com/vbauerster/mpb/v7: [v7.0.3 → v7.1.5](https://github.com/vbauerster/mpb/v7/compare/v7.0.3...v7.1.5)
+- go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.25.0
+- go.opentelemetry.io/otel/sdk: v0.20.0 → v1.0.1
+- go.opentelemetry.io/otel/trace: v0.20.0 → v1.0.1
+- go.opentelemetry.io/otel: v0.20.0 → v1.0.1
+- go.opentelemetry.io/proto/otlp: v0.7.0 → v0.9.0
 - golang.org/x/crypto: 0c34fe9 → a769d52
 - golang.org/x/sys: 0f9fa26 → 751e447
 - google.golang.org/grpc: v1.40.0 → v1.41.0
