--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -16,14 +16,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...bf8bc04](https://github.com/cri-o/cri-o/compare/v1.22.0...bf8bc04f08417b38043979620b100838d46e4f00) on Mon, 25 Oct 2021 16:29:59 UTC.
+[v1.22.0...f51497f](https://github.com/cri-o/cri-o/compare/v1.22.0...f51497f8dcb69248ce2982475c8fae575798466f) on Tue, 26 Oct 2021 14:44:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz)
-- [cri-o.arm64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bf8bc04f08417b38043979620b100838d46e4f00.tar.gz)
+- [cri-o.amd64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz)
+- [cri-o.arm64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Feature
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
+ - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Added `--profile-cpu` and `--profile-mem` CLI flags to write pprof profiles to a file when CRI-O exists. ([#5268](https://github.com/cri-o/cri-o/pull/5268), [@saschagrunert](https://github.com/saschagrunert))
  - Adds support for `allowed_annotations` for workloads. The field functions the same as `allowed_annotations` in runtime handlers, and is meant to replace the runtime handler variant.
   Deprecate `allowed_annotations` in runtime handlers. ([#5358](https://github.com/cri-o/cri-o/pull/5358), [@haircommander](https://github.com/haircommander))
@@ -63,33 +64,44 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Added
 - github.com/dtylman/scp: [f3000a3](https://github.com/dtylman/scp/tree/f3000a3)
+- github.com/sclevine/agouti: [v3.0.0+incompatible](https://github.com/sclevine/agouti/tree/v3.0.0)
 - go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc: v1.0.1
 - go.opentelemetry.io/otel/exporters/otlp/otlptrace: v1.0.1
 
 ### Changed
 - github.com/Microsoft/go-winio: [v0.5.0 → v0.5.1](https://github.com/Microsoft/go-winio/compare/v0.5.0...v0.5.1)
 - github.com/Microsoft/hcsshim: [v0.8.20 → v0.8.22](https://github.com/Microsoft/hcsshim/compare/v0.8.20...v0.8.22)
+- github.com/alexflint/go-filemutex: [72bdc8e → v1.1.0](https://github.com/alexflint/go-filemutex/compare/72bdc8e...v1.1.0)
+- github.com/buger/jsonparser: [f4dd9f5 → v1.1.1](https://github.com/buger/jsonparser/compare/f4dd9f5...v1.1.1)
 - github.com/cenkalti/backoff/v4: [v4.1.0 → v4.1.1](https://github.com/cenkalti/backoff/v4/compare/v4.1.0...v4.1.1)
 - github.com/cespare/xxhash/v2: [v2.1.1 → v2.1.2](https://github.com/cespare/xxhash/v2/compare/v2.1.1...v2.1.2)
+- github.com/checkpoint-restore/checkpointctl: [a2024f5 → c31748b](https://github.com/checkpoint-restore/checkpointctl/compare/a2024f5...c31748b)
 - github.com/cncf/xds/go: [fbca930 → aa0b789](https://github.com/cncf/xds/go/compare/fbca930...aa0b789)
 - github.com/containerd/cgroups: [v1.0.1 → v1.0.2](https://github.com/containerd/cgroups/compare/v1.0.1...v1.0.2)
 - github.com/containerd/containerd: [v1.5.5 → v1.5.7](https://github.com/containerd/containerd/compare/v1.5.5...v1.5.7)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58 → v0.9.0](https://github.com/containerd/stargz-snapshotter/estargz/compare/2b97b58...v0.9.0)
+- github.com/containernetworking/cni: [v0.8.1 → v1.0.1](https://github.com/containernetworking/cni/compare/v0.8.1...v1.0.1)
+- github.com/containernetworking/plugins: [v0.9.1 → v1.0.1](https://github.com/containernetworking/plugins/compare/v0.9.1...v1.0.1)
 - github.com/containers/buildah: [v1.22.3 → v1.23.1](https://github.com/containers/buildah/compare/v1.22.3...v1.23.1)
-- github.com/containers/common: [v0.43.2 → v0.46.0](https://github.com/containers/common/compare/v0.43.2...v0.46.0)
+- github.com/containers/common: [v0.43.2 → 161e078](https://github.com/containers/common/compare/v0.43.2...161e078)
 - github.com/containers/image/v5: [v5.15.2 → v5.16.1](https://github.com/containers/image/v5/compare/v5.15.2...v5.16.1)
-- github.com/containers/podman/v3: [v3.3.0 → v3.4.1](https://github.com/containers/podman/v3/compare/v3.3.0...v3.4.1)
+- github.com/containers/podman/v3: [v3.3.0 → 8bcc086](https://github.com/containers/podman/v3/compare/v3.3.0...8bcc086)
 - github.com/containers/psgo: [v1.5.2 → v1.7.1](https://github.com/containers/psgo/compare/v1.5.2...v1.7.1)
 - github.com/containers/storage: [v1.34.1 → v1.37.0](https://github.com/containers/storage/compare/v1.34.1...v1.37.0)
+- github.com/coreos/go-iptables: [v0.5.0 → v0.6.0](https://github.com/coreos/go-iptables/compare/v0.5.0...v0.6.0)
 - github.com/creack/pty: [v1.1.15 → v1.1.17](https://github.com/creack/pty/compare/v1.1.15...v1.1.17)
+- github.com/cri-o/ocicni: [4ea5fb8 → b388448](https://github.com/cri-o/ocicni/compare/4ea5fb8...b388448)
+- github.com/docker/docker: [v20.10.8+incompatible → v20.10.9+incompatible](https://github.com/docker/docker/compare/v20.10.8...v20.10.9)
 - github.com/envoyproxy/go-control-plane: [63b5d3c → cf90f65](https://github.com/envoyproxy/go-control-plane/compare/63b5d3c...cf90f65)
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.3 → v1.7.4](https://github.com/fsouza/go-dockerclient/compare/v1.7.3...v1.7.4)
 - github.com/go-logr/logr: [v0.4.0 → v1.2.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.0)
 - github.com/godbus/dbus/v5: [v5.0.4 → v5.0.5](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.5)
 - github.com/intel/goresctrl: [v0.1.0 → v0.2.0](https://github.com/intel/goresctrl/compare/v0.1.0...v0.2.0)
+- github.com/j-keck/arping: [2cf9dc6 → v1.0.2](https://github.com/j-keck/arping/compare/2cf9dc6...v1.0.2)
 - github.com/json-iterator/go: [v1.1.11 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.11...v1.1.12)
 - github.com/klauspost/compress: [v1.13.4 → v1.13.6](https://github.com/klauspost/compress/compare/v1.13.4...v1.13.6)
+- github.com/mattn/go-isatty: [v0.0.12 → v0.0.14](https://github.com/mattn/go-isatty/compare/v0.0.12...v0.0.14)
 - github.com/mitchellh/mapstructure: [v1.4.1 → v1.4.2](https://github.com/mitchellh/mapstructure/compare/v1.4.1...v1.4.2)
 - github.com/moby/term: [9d4ed18 → 3f7ff69](https://github.com/moby/term/compare/9d4ed18...3f7ff69)
 - github.com/modern-go/reflect2: [v1.0.1 → v1.0.2](https://github.com/modern-go/reflect2/compare/v1.0.1...v1.0.2)
@@ -99,9 +111,12 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
 - github.com/prometheus/procfs: [v0.6.0 → v0.7.3](https://github.com/prometheus/procfs/compare/v0.6.0...v0.7.3)
 - github.com/rootless-containers/rootlesskit: [v0.14.4 → v0.14.5](https://github.com/rootless-containers/rootlesskit/compare/v0.14.4...v0.14.5)
+- github.com/safchain/ethtool: [42ed695 → 9aa261d](https://github.com/safchain/ethtool/compare/42ed695...9aa261d)
 - github.com/urfave/cli: [v1.22.2 → v1.22.4](https://github.com/urfave/cli/compare/v1.22.2...v1.22.4)
 - github.com/vbatts/tar-split: [v0.11.1 → v0.11.2](https://github.com/vbatts/tar-split/compare/v0.11.1...v0.11.2)
 - github.com/vbauerster/mpb/v7: [v7.0.3 → v7.1.5](https://github.com/vbauerster/mpb/v7/compare/v7.0.3...v7.1.5)
+- github.com/vishvananda/netlink: [d40f988 → e1a867c](https://github.com/vishvananda/netlink/compare/d40f988...e1a867c)
+- github.com/vishvananda/netns: [db3c7e5 → 2eb08e3](https://github.com/vishvananda/netns/compare/db3c7e5...2eb08e3)
 - go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.25.0
 - go.opentelemetry.io/otel/sdk: v0.20.0 → v1.0.1
 - go.opentelemetry.io/otel/trace: v0.20.0 → v1.0.1
