--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -16,14 +16,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...f51497f](https://github.com/cri-o/cri-o/compare/v1.22.0...f51497f8dcb69248ce2982475c8fae575798466f) on Tue, 26 Oct 2021 14:44:50 UTC.
+[v1.22.0...b026482](https://github.com/cri-o/cri-o/compare/v1.22.0...b026482d4fff112c00480a06e573a606ed25da95) on Tue, 26 Oct 2021 21:48:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz)
-- [cri-o.arm64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f51497f8dcb69248ce2982475c8fae575798466f.tar.gz)
+- [cri-o.amd64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz)
+- [cri-o.arm64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -42,6 +42,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - The option to export OpenTelemetry trace data has been added. This is experimental and not enabled by default. To enable tracing, configure the tracing section of the crio configuration file. ([#4883](https://github.com/cri-o/cri-o/pull/4883), [@sallyom](https://github.com/sallyom))
 
 #### Documentation
+ - Fixed `crio_image_pulls_layer_size_` metric name in tutorials/metrics.md ([#5278](https://github.com/cri-o/cri-o/pull/5278), [@saschagrunert](https://github.com/saschagrunert))
  - Improve runtime handler documentation to mention "runtime handler" in favor of the internal "runtime_handler" variable. ([#5395](https://github.com/cri-o/cri-o/pull/5395), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
