--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,6 +2,7 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
+      - [Other](#other)
       - [Dependency-Change](#dependency-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -16,18 +17,21 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...b026482](https://github.com/cri-o/cri-o/compare/v1.22.0...b026482d4fff112c00480a06e573a606ed25da95) on Tue, 26 Oct 2021 21:48:52 UTC.
+[v1.22.0...0fb9c0c](https://github.com/cri-o/cri-o/compare/v1.22.0...0fb9c0c6322895a2060747c46c13ee29d0fc2a58) on Thu, 28 Oct 2021 08:16:27 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz)
-- [cri-o.arm64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b026482d4fff112c00480a06e573a606ed25da95.tar.gz)
+- [cri-o.amd64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz)
+- [cri-o.arm64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
+
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
 
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
@@ -97,7 +101,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.3 → v1.7.4](https://github.com/fsouza/go-dockerclient/compare/v1.7.3...v1.7.4)
 - github.com/go-logr/logr: [v0.4.0 → v1.2.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.0)
-- github.com/godbus/dbus/v5: [v5.0.4 → v5.0.5](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.5)
+- github.com/godbus/dbus/v5: [v5.0.4 → v5.0.6](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.6)
 - github.com/intel/goresctrl: [v0.1.0 → v0.2.0](https://github.com/intel/goresctrl/compare/v0.1.0...v0.2.0)
 - github.com/j-keck/arping: [2cf9dc6 → v1.0.2](https://github.com/j-keck/arping/compare/2cf9dc6...v1.0.2)
 - github.com/json-iterator/go: [v1.1.11 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.11...v1.1.12)
