Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...0fb9c0c](https://github.com/cri-o/cri-o/compare/v1.22.0...0fb9c0c6322895a2060747c46c13ee29d0fc2a58) on Thu, 28 Oct 2021 08:16:27 UTC.
+[v1.22.0...a05be1c](https://github.com/cri-o/cri-o/compare/v1.22.0...a05be1c4dc951258653b6279b34b1f745c5c9bc9) on Thu, 28 Oct 2021 09:50:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz)
-- [cri-o.arm64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0fb9c0c6322895a2060747c46c13ee29d0fc2a58.tar.gz)
+- [cri-o.amd64.a05be1c4dc951258653b6279b34b1f745c5c9bc9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a05be1c4dc951258653b6279b34b1f745c5c9bc9.tar.gz)
+- [cri-o.arm64.a05be1c4dc951258653b6279b34b1f745c5c9bc9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a05be1c4dc951258653b6279b34b1f745c5c9bc9.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -39,6 +39,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Feature
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
+ - Add support for swap CRI field, allowing a container's memory swap limit to be configured by the Kubelet.
+  Add support for unified CRI field, allowing a container's cgroupv2 specific files to be configured by the Kubelet ([#5207](https://github.com/cri-o/cri-o/pull/5207), [@haircommander](https://github.com/haircommander))
  - Added `--profile-cpu` and `--profile-mem` CLI flags to write pprof profiles to a file when CRI-O exists. ([#5268](https://github.com/cri-o/cri-o/pull/5268), [@saschagrunert](https://github.com/saschagrunert))
  - Adds support for `allowed_annotations` for workloads. The field functions the same as `allowed_annotations` in runtime handlers, and is meant to replace the runtime handler variant.
   Deprecate `allowed_annotations` in runtime handlers. ([#5358](https://github.com/cri-o/cri-o/pull/5358), [@haircommander](https://github.com/haircommander))
