--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +17,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...d00a06c](https://github.com/cri-o/cri-o/compare/v1.22.0...d00a06c0cb4f1aa4e64b334f30a80d4e6d06e251) on Thu, 28 Oct 2021 13:06:57 UTC.
+[v1.22.0...6ee64e9](https://github.com/cri-o/cri-o/compare/v1.22.0...6ee64e95d2a9346d5c202bee84496d682ca84f02) on Fri, 29 Oct 2021 16:35:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d00a06c0cb4f1aa4e64b334f30a80d4e6d06e251.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d00a06c0cb4f1aa4e64b334f30a80d4e6d06e251.tar.gz)
-- [cri-o.arm64.d00a06c0cb4f1aa4e64b334f30a80d4e6d06e251.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d00a06c0cb4f1aa4e64b334f30a80d4e6d06e251.tar.gz)
+- [cri-o.amd64.6ee64e95d2a9346d5c202bee84496d682ca84f02.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6ee64e95d2a9346d5c202bee84496d682ca84f02.tar.gz)
+- [cri-o.arm64.6ee64e95d2a9346d5c202bee84496d682ca84f02.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6ee64e95d2a9346d5c202bee84496d682ca84f02.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
-
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Feature
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
@@ -52,6 +52,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Improve runtime handler documentation to mention "runtime handler" in favor of the internal "runtime_handler" variable. ([#5395](https://github.com/cri-o/cri-o/pull/5395), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
+ - Chown the stdin pipe to the user running in the container, so accessing /dev/stdin from an exec session works with crun ([#5391](https://github.com/cri-o/cri-o/pull/5391), [@giuseppe](https://github.com/giuseppe))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5306](https://github.com/cri-o/cri-o/pull/5306), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
