Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +17,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...b5002c4](https://github.com/cri-o/cri-o/compare/v1.22.0...b5002c42fb2fab5daed0a68576c06dd9c0116f86) on Tue, 02 Nov 2021 10:44:48 UTC.
+[v1.22.0...d690832](https://github.com/cri-o/cri-o/compare/v1.22.0...d690832a578dbe1f8e68ebb9c4ee2853a4c832ac) on Wed, 03 Nov 2021 20:56:29 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b5002c42fb2fab5daed0a68576c06dd9c0116f86.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b5002c42fb2fab5daed0a68576c06dd9c0116f86.tar.gz)
-- [cri-o.arm64.b5002c42fb2fab5daed0a68576c06dd9c0116f86.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b5002c42fb2fab5daed0a68576c06dd9c0116f86.tar.gz)
+- [cri-o.amd64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz)
+- [cri-o.arm64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Other
- - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
-
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
 
 #### Feature
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
@@ -84,7 +84,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/cenkalti/backoff/v4: [v4.1.0 → v4.1.1](https://github.com/cenkalti/backoff/v4/compare/v4.1.0...v4.1.1)
 - github.com/cespare/xxhash/v2: [v2.1.1 → v2.1.2](https://github.com/cespare/xxhash/v2/compare/v2.1.1...v2.1.2)
 - github.com/checkpoint-restore/checkpointctl: [a2024f5 → c31748b](https://github.com/checkpoint-restore/checkpointctl/compare/a2024f5...c31748b)
-- github.com/cncf/xds/go: [fbca930 → aa0b789](https://github.com/cncf/xds/go/compare/fbca930...aa0b789)
+- github.com/cncf/udpa/go: [5459f2c → 04548b0](https://github.com/cncf/udpa/go/compare/5459f2c...04548b0)
+- github.com/cncf/xds/go: [fbca930 → cb28da3](https://github.com/cncf/xds/go/compare/fbca930...cb28da3)
 - github.com/containerd/cgroups: [v1.0.1 → v1.0.2](https://github.com/containerd/cgroups/compare/v1.0.1...v1.0.2)
 - github.com/containerd/containerd: [v1.5.5 → v1.5.7](https://github.com/containerd/containerd/compare/v1.5.5...v1.5.7)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58 → v0.9.0](https://github.com/containerd/stargz-snapshotter/estargz/compare/2b97b58...v0.9.0)
@@ -132,7 +133,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.9.0
 - golang.org/x/crypto: 0c34fe9 → a769d52
 - golang.org/x/sys: 0f9fa26 → 751e447
-- google.golang.org/grpc: v1.40.0 → v1.41.0
+- google.golang.org/grpc: v1.40.0 → v1.42.0
 - google.golang.org/protobuf: v1.26.0 → v1.27.1
 - k8s.io/klog/v2: v2.10.0 → v2.30.0
 - k8s.io/kubernetes/staging/src/k8s.io/api: c2b5237 → 8b5a191
