Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...d690832](https://github.com/cri-o/cri-o/compare/v1.22.0...d690832a578dbe1f8e68ebb9c4ee2853a4c832ac) on Wed, 03 Nov 2021 20:56:29 UTC.
+[v1.22.0...3943334](https://github.com/cri-o/cri-o/compare/v1.22.0...394333403c4e5597ee20247f0f2762b7a9c78a4d) on Thu, 04 Nov 2021 12:10:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz)
-- [cri-o.arm64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d690832a578dbe1f8e68ebb9c4ee2853a4c832ac.tar.gz)
+- [cri-o.amd64.394333403c4e5597ee20247f0f2762b7a9c78a4d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.394333403c4e5597ee20247f0f2762b7a9c78a4d.tar.gz)
+- [cri-o.arm64.394333403c4e5597ee20247f0f2762b7a9c78a4d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.394333403c4e5597ee20247f0f2762b7a9c78a4d.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -61,6 +61,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
+ - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5423](https://github.com/cri-o/cri-o/pull/5423), [@QiWang19](https://github.com/QiWang19))
 
 #### Other (Cleanup or Flake)
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
